fix layout bug

--- a/www/themes/index/blocks/views/blog2/bgHead/bgHead.css
+++ b/www/themes/index/blocks/views/blog2/bgHead/bgHead.css
@@ -46,100 +46,24 @@ a:hover {
  }
  .home a{
   color: #2EA0D1;
-  font-size: 1.2em;
+  font-size: 1.0em;
  }
  .home a:hover {
   color:#4d4d4d;
   text-decoration: none;
  }
+  .home a i{
+  font-size: 1.2em;
+ }
+
 /*語系下拉選單*/
-.selectBox{
-  position:relative;
-  display:inline-block;
-  cursor:default;
-  text-align:left;
-  line-height:20px;
-  clear:both;
-  width:100px;
-  padding: 0px;
-  margin: 25px 0 0;
+select {
+  margin: 20px 0 0;
   font-family: "微軟正黑體","Adobe 黑体 Std R", "Adobe 繁黑體 Std B",  Arial, sans-serif;
-}
-.selected{
-  position:relative;
-  float:left;
-  width:100px;
-  height:24px;
-  z-index:1;
-  text-indent:10px;
-  border:1px solid #ccc;
-  border-radius:4px;
-  background: #fff;
-  overflow:hidden;
-  padding: 0px;
-}
-.selected a{
-  font-family:sans-serif;
-  font-size: 14px;
-  line-height: 0px;
-  padding: 0px;
+  font-size: 0.9em;
+  line-height: 1.5em;
   color:#3a3a3a;
-  display: block;
-  /*margin: -13px 0 0 -10px;*/
-  margin: 10px 0 0px;
-}
-.selected a:hover{
-  color: #666;
-  text-decoration: none;
-}
-.selectArrow{
-  position:absolute;
-  top:0px;
-  left:79px;
-  width:20px;
-  height:24px;
-  z-index:2;
-  border:1px solid #ccc;
-  border-top-right-radius:4px;
-  border-bottom-right-radius:4px;
-  text-align:center;
-  vertical-align:middle;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  /*background: #6D6D6D;*/
-  background: #2EA0D1;
-  font-size: 12px;
-  color: #fff;
-}
-.selectArrow i{
-  font-size: 12px;
-  color: #fff;
-  display: block;
-}
-.selectOptions{
-  position:absolute;
-  top:24px;
-  left:0px;
-  width:100px;
-  z-index: 7;
-  border:1px solid #ccc;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  overflow:hidden;
-  background: #fff;
-  text-indent: 10px;
-  display:none;
-}
-.selectOption{
-  display: block;
-  width: 100%;
-  line-height: 20px;
-  padding: 5px 10%;
-}
-.selectOption:hover{
-  color:#555;
-  background: #F4F4F4;
+  width:130px;
+  height:28px;
+  padding-left: 5px;
 }
